public class Identite {

    private String nom;
    private String prenom;
    private String NIP;

    public Identite(String n, String p , String NIP){
        this.nom = n;
        this.prenom = p;
        this.NIP=NIP;
    }



}
