@startuml
'https://plantuml.com/sequence-diagram

class Identite {
   -nom : String
   -prenom : String
   -NIP : String
   +Identite(String n, String p, String nip)
}

class Formation{
    -id : int
    -matieres : Map<String, int>
}

class Etudiant{
    -resultat : Map<String, List<int>>
    +Etudiant(Identite i, Formation f)
}

class GroupeEtudiant{
}

Etudiant "1" --> "1" Identite : -identite
Etudiant "1" --> "1" Formation : -formation
GroupeEtudiant "1" --> "*" Etudiant : -composition
GroupeEtudiant --> Formation :-formation
@enduml